# ic-turso-demo

./: Cargo.toml  README.md  dfx.json
.cargo/: config.toml
ic-turso-bindings/: Cargo.toml
ic-turso-bindings/src/: lib.rs  stable_io.rs  transaction.rs
ic-turso-demo/: Cargo.toml  ic-turso-demo.did
ic-turso-demo/src/: lib.rs  test.rs
patches/sqlite3-parser/: Cargo.toml
scripts/: build.sh
src/backend/: Cargo.toml
src/backend/src/: lib.rs
src/ic-turso-bindings/: Cargo.toml
src/ic-turso-bindings/src/: stable_io.rs
