[package]
name = "ic-turso-demo"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
getrandom = { version = "0.2.16", features = ["custom"] }
getrandom_v03 = { package = "getrandom", version = "0.3" }
hex = "0.4.3"
ic-cdk = "0.18.5"
ic-cdk-timers = "0.12.2"
ic-stable-structures = "0.7.0"
ic-turso-bindings = { git = "https://github.com/kristoferlund/ic-turso-bindings.git", features = [
  "experimental_indexes",
] }
rand = { version = "0.9.2", features = ["os_rng"] }
# refinery = { path = "../../refinery/refinery", version = "0.8.16", features = [
#   "turso",
# ] }
serde = "1.0.164"
serde_json = "1.0.97"
